# FaceRecognition

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  simple_facerec.py
.github/workflows/: ci.yml
scripts/: download_lfw.sh
src/visage/: __init__.py  cli.py  config.py  imaging.py  models.py
src/visage/api/: __init__.py  app.py  dependencies.py  routes.py
src/visage/embeddings/: __init__.py  base.py  insightface_embedder.py
src/visage/evaluation/: __init__.py  lfw.py  metrics.py
src/visage/index/: __init__.py  base.py  faiss_index.py  numpy_index.py
src/visage/service/: __init__.py  gallery.py  recognizer.py
tests/: conftest.py  test_api.py  test_config_and_gallery.py  test_metrics.py  test_numpy_index.py  test_recognizer.py
