[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visage"
version = "0.1.0"
description = "Real-time face recognition service built on ArcFace embeddings and FAISS vector search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Thanos Akrivos" }]
keywords = ["face-recognition", "arcface", "faiss", "vector-search", "fastapi", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "pillow>=10.2",
    "python-multipart>=0.0.9",
    "typer>=0.12",
]

[project.optional-dependencies]
recognition = [
    "insightface>=0.7",
    "onnxruntime>=1.17",
    "faiss-cpu>=1.8",
    "opencv-python-headless>=4.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
visage = "visage.cli:app"

[project.urls]
Repository = "https://github.com/akrvs/Visage"

[tool.hatch.build.targets.wheel]
packages = ["src/visage"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/visage/api/routes.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.10"
packages = ["visage"]
ignore_missing_imports = true
